# simtxt

./: README.org  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: actions.yml
client/: .dockerignore  .eslintrc.js  .gitignore  Dockerfile  config-overrides.js  package.json
client/public/: index.html
client/src/: App.test.tsx  App.tsx  index.tsx  reportWebVitals.ts  types.ts
client/src/components/: index.tsx
client/src/pages/: home.tsx  text.tsx
server/: .dockerignore  .envrc.default  Dockerfile  app.py  mypy.ini  pyproject.toml  worker.py
server/simtxt/: app.py  config.py  db.py  index.py  logg.py  logging.py  misc.py  orm.py  resolvers.py  sdl.graphql  tasks.py  utils.py
server/stubs/: simtxt-stubs
server/stubs/motor/: motor_asyncio.pyi
server/stubs/simtxt/: async_collection.pyi
server/tests/: test_app.py  test_orm.py
