[tool.poetry]
name = "simtxt"
version = "0.1.0"
description = ""
authors = ["Roman Dolgyi <roman@btsolutions.co>"]

[tool.poetry.dependencies]
python = "^3.8"
tartiflette-aiohttp = "^1.4.0"
motor = "^2.3.0"
spacy = "^2.3.5"
aiotasks = {url = "https://github.com/cr0hn/aiotasks/archive/ec485c8.tar.gz"}
gensim = "^3.8.3"
aiohttp_cors = "^0.7.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.4"
pylint = {url = "https://github.com/PyCQA/pylint/archive/168bee7.tar.gz"}
rope = "^0.18.0"
mccabe = "^0.6.1"
python-language-server = "^0.36.2"
pyls-isort = "^0.2.0"
pyls-black = "^0.4.6"
pytest = "^6.2.1"
mypy = "^0.790"
pymongo-stubs = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = "missing-function-docstring, missing-module-docstring, missing-class-docstring, too-few-public-methods"
variable-rgx="[a-z_][a-z0-9_]{0,30}$"
ignored-modules="typing,ccxt"
